Changelog
=========

2.1.3 (unreleased)
------------------


2.1.2 (2011-05-12)
------------------

- Use DateTime's built-in support to do `datetime.datetime` conversions.
  [hannosch]

- Fixed `atdocument` tests to be compatible with Archetypes 1.7.5.
  [hannosch]

- Optimize images and icon file sizes.
  [hannosch]

- The implementations of HEAD for folderish objects were severely outdated
  and never made much sense to begin with. Replace with basic
  WebdavResource.HEAD.
  [stefan]

2.1.1 (2011-02-04)
------------------

- Added support for the new BooleanIndex and UUIDIndex for collections.
  [hannosch]

- Remove superfluous and/or operator for "Item type" criterion.
  This fixes https://dev.plone.org/plone/ticket/10882
  [msmith64]

2.1.0 (2011-01-03)
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Added CSS id to subtopics-header in atct_topic_view.pt to allow styling.
  [tom_gross]

- Make sure topic criteria get a valid UUID using plone.uuid.
  [toutpt, davisagli]

2.0.7 (2011-01-03)
------------------

- Pass on batching arguments into the catalog query call inside the collections
  `queryCatalog` method.
  [hannosch]

- Add Site Administrator role to various permissions, for forward compatibility
  with Plone 4.1.
  [davisagli]

- Avoid some deprecation warnings under Zope 2.13.
  [hannosch]

- Add missing content-core macro definition to atct_topic_view template.
  [davisagli]

2.0.6 (2010-09-28)
------------------

- Fixed: album view of a collection of Image items
  displayed images on three sections (images, folders, others)
  due to atctListAlbum script bad use of topic API.
  [thomasdesvenain]

2.0.5 (2010-09-08)
------------------

- Changed order of input fields in ``atct_manageTopicIndex.cpt`` and
  ``atct_manageTopicMetadata.cpt``. Checkbox field *must not* be the first one
  because http request ``:records`` gets messed up otherwise. This fixes
  http://dev.plone.org/plone/ticket/10896.
  [petschki]
