@@ -4,6 +4,8 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- Fixed: adding a disallowed subobject raises ValueError instead of Unauthorized.
+  [thomasdesvenain]
 
 2.1.2 (2011-05-12)
 ------------------
